--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ hr.content-divider {
 }
 
 #content-box-1 {
-  background: url(../images/towada-lake-01.jpg);
+  background: url(../images/towada-lake-01.jpg) #5DAC81;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -94,7 +94,7 @@ hr.content-divider {
 }
 
 #content-box-2 {
-  background: url(../images/shiriyazaki-lighthouse-01.jpg);
+  background: url(../images/shiriyazaki-lighthouse-01.jpg) #5DAC81;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -107,7 +107,7 @@ hr.content-divider {
 }
 
 #content-box-3 {
-  background: url(../images/misawa-dogrun-01.jpg);
+  background: url(../images/misawa-dogrun-01.jpg) #5DAC81;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
