--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ footer a:hover {
 
 .footer-message {
   color: #FFFFFB;
-  font-size: 1.0rem;
+  font-size: 0.8rem;
   font-family: 'Quicksand', 'Rounded Mplus 1c', sans-serif;
 }
 
@@ -140,6 +140,18 @@ hr.content-divider {
 }
 
 @media(max-width: 600px) {
+  .content-title {
+    font-size: 1.6rem;
+  }
+
+  .content-subtitle {
+    font-size: 1.2rem;
+  }
+
+  .content-text {
+    font-size: 1.0rem;
+  }
+
   .title {
     font-size: 2.5rem;
   }
